*** empty log message ***

--- a/tutorial/queues/queues.dsp.in
+++ b/tutorial/queues/queues.dsp.in
@@ -7,21 +7,21 @@
 CFG=queues - Win32 Debug Tkenv
 !MESSAGE This is not a valid makefile. To build this project using NMAKE,
 !MESSAGE use the Export Makefile command and run
-!MESSAGE 
+!MESSAGE
 !MESSAGE NMAKE /f "queues.mak".
-!MESSAGE 
+!MESSAGE
 !MESSAGE You can specify a configuration when running NMAKE
 !MESSAGE by defining the macro CFG on the command line. For example:
-!MESSAGE 
+!MESSAGE
 !MESSAGE NMAKE /f "queues.mak" CFG="queues - Win32 Debug Tkenv"
-!MESSAGE 
+!MESSAGE
 !MESSAGE Possible choices for configuration are:
-!MESSAGE 
+!MESSAGE
 !MESSAGE "queues - Win32 Debug Tkenv" (based on "Win32 (x86) Console Application")
 !MESSAGE "queues - Win32 Debug Cmdenv" (based on "Win32 (x86) Console Application")
 !MESSAGE "queues - Win32 Release Tkenv" (based on "Win32 (x86) Console Application")
 !MESSAGE "queues - Win32 Release Cmdenv" (based on "Win32 (x86) Console Application")
-!MESSAGE 
+!MESSAGE
 
 # Begin Project
 # PROP AllowPerConfigDependencies 0
@@ -128,7 +128,7 @@ LINK32=link.exe
 # ADD BASE LINK32 kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib /nologo /subsystem:console /machine:I386
 # ADD LINK32 cmdenv.lib sim_std.lib envir.lib nedxml.lib @EXPAT_LIB@ kernel32.lib user32.lib gdi32.lib winspool.lib comdlg32.lib advapi32.lib shell32.lib ole32.lib oleaut32.lib uuid.lib odbc32.lib odbccp32.lib /nologo /stack:0x1000000 /subsystem:console /machine:I386 /libpath:"@OMNETPP_LIB_DIR@" /libpath:"@TK_LIB_PATH@" /libpath:"@EXPAT_LIB_PATH@"
 
-!ENDIF 
+!ENDIF
 
 # Begin Target
 
@@ -196,7 +196,7 @@ InputPath=.\fifo.ned
 InputName=fifo
 
 "$(InputName)_n.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
-	@OMNETPP_BIN_DIR@\nedc.exe -s _n.cpp $(InputPath)
+	@OMNETPP_BIN_DIR@\nedtool.exe -s _n.cpp $(InputPath)
 
 # End Custom Build
 
@@ -208,7 +208,7 @@ InputPath=.\fifo.ned
 InputName=fifo
 
 "$(InputName)_n.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
-	@OMNETPP_BIN_DIR@\nedc.exe -s _n.cpp $(InputPath)
+	@OMNETPP_BIN_DIR@\nedtool.exe -s _n.cpp $(InputPath)
 
 # End Custom Build
 
@@ -220,7 +220,7 @@ InputPath=.\fifo.ned
 InputName=fifo
 
 "$(InputName)_n.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
-	@OMNETPP_BIN_DIR@\nedc.exe -s _n.cpp $(InputPath)
+	@OMNETPP_BIN_DIR@\nedtool.exe -s _n.cpp $(InputPath)
 
 # End Custom Build
 
@@ -232,11 +232,11 @@ InputPath=.\fifo.ned
 InputName=fifo
 
 "$(InputName)_n.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
-	@OMNETPP_BIN_DIR@\nedc.exe -s _n.cpp $(InputPath)
+	@OMNETPP_BIN_DIR@\nedtool.exe -s _n.cpp $(InputPath)
 
 # End Custom Build
 
-!ENDIF 
+!ENDIF
 
 # End Source File
 # Begin Source File
@@ -251,7 +251,7 @@ InputPath=.\fifonet.ned
 InputName=fifonet
 
 "$(InputName)_n.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
-	@OMNETPP_BIN_DIR@\nedc.exe -s _n.cpp $(InputPath)
+	@OMNETPP_BIN_DIR@\nedtool.exe -s _n.cpp $(InputPath)
 
 # End Custom Build
 
@@ -263,7 +263,7 @@ InputPath=.\fifonet.ned
 InputName=fifonet
 
 "$(InputName)_n.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
-	@OMNETPP_BIN_DIR@\nedc.exe -s _n.cpp $(InputPath)
+	@OMNETPP_BIN_DIR@\nedtool.exe -s _n.cpp $(InputPath)
 
 # End Custom Build
 
@@ -275,7 +275,7 @@ InputPath=.\fifonet.ned
 InputName=fifonet
 
 "$(InputName)_n.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
-	@OMNETPP_BIN_DIR@\nedc.exe -s _n.cpp $(InputPath)
+	@OMNETPP_BIN_DIR@\nedtool.exe -s _n.cpp $(InputPath)
 
 # End Custom Build
 
@@ -287,11 +287,11 @@ InputPath=.\fifonet.ned
 InputName=fifonet
 
 "$(InputName)_n.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
-	@OMNETPP_BIN_DIR@\nedc.exe -s _n.cpp $(InputPath)
+	@OMNETPP_BIN_DIR@\nedtool.exe -s _n.cpp $(InputPath)
 
 # End Custom Build
 
-!ENDIF 
+!ENDIF
 
 # End Source File
 # Begin Source File
@@ -306,7 +306,7 @@ InputPath=.\gen.ned
 InputName=gen
 
 "$(InputName)_n.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
-	@OMNETPP_BIN_DIR@\nedc.exe -s _n.cpp $(InputPath)
+	@OMNETPP_BIN_DIR@\nedtool.exe -s _n.cpp $(InputPath)
 
 # End Custom Build
 
@@ -318,7 +318,7 @@ InputPath=.\gen.ned
 InputName=gen
 
 "$(InputName)_n.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
-	@OMNETPP_BIN_DIR@\nedc.exe -s _n.cpp $(InputPath)
+	@OMNETPP_BIN_DIR@\nedtool.exe -s _n.cpp $(InputPath)
 
 # End Custom Build
 
@@ -330,7 +330,7 @@ InputPath=.\gen.ned
 InputName=gen
 
 "$(InputName)_n.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
-	@OMNETPP_BIN_DIR@\nedc.exe -s _n.cpp $(InputPath)
+	@OMNETPP_BIN_DIR@\nedtool.exe -s _n.cpp $(InputPath)
 
 # End Custom Build
 
@@ -342,11 +342,11 @@ InputPath=.\gen.ned
 InputName=gen
 
 "$(InputName)_n.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
-	@OMNETPP_BIN_DIR@\nedc.exe -s _n.cpp $(InputPath)
+	@OMNETPP_BIN_DIR@\nedtool.exe -s _n.cpp $(InputPath)
 
 # End Custom Build
 
-!ENDIF 
+!ENDIF
 
 # End Source File
 # Begin Source File
@@ -361,7 +361,7 @@ InputPath=.\ring.ned
 InputName=ring
 
 "$(InputName)_n.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
-	@OMNETPP_BIN_DIR@\nedc.exe -s _n.cpp $(InputPath)
+	@OMNETPP_BIN_DIR@\nedtool.exe -s _n.cpp $(InputPath)
 
 # End Custom Build
 
@@ -373,7 +373,7 @@ InputPath=.\ring.ned
 InputName=ring
 
 "$(InputName)_n.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
-	@OMNETPP_BIN_DIR@\nedc.exe -s _n.cpp $(InputPath)
+	@OMNETPP_BIN_DIR@\nedtool.exe -s _n.cpp $(InputPath)
 
 # End Custom Build
 
@@ -385,7 +385,7 @@ InputPath=.\ring.ned
 InputName=ring
 
 "$(InputName)_n.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
-	@OMNETPP_BIN_DIR@\nedc.exe -s _n.cpp $(InputPath)
+	@OMNETPP_BIN_DIR@\nedtool.exe -s _n.cpp $(InputPath)
 
 # End Custom Build
 
@@ -397,11 +397,11 @@ InputPath=.\ring.ned
 InputName=ring
 
 "$(InputName)_n.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
-	@OMNETPP_BIN_DIR@\nedc.exe -s _n.cpp $(InputPath)
+	@OMNETPP_BIN_DIR@\nedtool.exe -s _n.cpp $(InputPath)
 
 # End Custom Build
 
-!ENDIF 
+!ENDIF
 
 # End Source File
 # Begin Source File
@@ -416,7 +416,7 @@ InputPath=.\sink.ned
 InputName=sink
 
 "$(InputName)_n.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
-	@OMNETPP_BIN_DIR@\nedc.exe -s _n.cpp $(InputPath)
+	@OMNETPP_BIN_DIR@\nedtool.exe -s _n.cpp $(InputPath)
 
 # End Custom Build
 
@@ -428,7 +428,7 @@ InputPath=.\sink.ned
 InputName=sink
 
 "$(InputName)_n.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
-	@OMNETPP_BIN_DIR@\nedc.exe -s _n.cpp $(InputPath)
+	@OMNETPP_BIN_DIR@\nedtool.exe -s _n.cpp $(InputPath)
 
 # End Custom Build
 
@@ -440,7 +440,7 @@ InputPath=.\sink.ned
 InputName=sink
 
 "$(InputName)_n.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
-	@OMNETPP_BIN_DIR@\nedc.exe -s _n.cpp $(InputPath)
+	@OMNETPP_BIN_DIR@\nedtool.exe -s _n.cpp $(InputPath)
 
 # End Custom Build
 
@@ -452,11 +452,11 @@ InputPath=.\sink.ned
 InputName=sink
 
 "$(InputName)_n.cpp" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"
-	@OMNETPP_BIN_DIR@\nedc.exe -s _n.cpp $(InputPath)
+	@OMNETPP_BIN_DIR@\nedtool.exe -s _n.cpp $(InputPath)
 
 # End Custom Build
 
-!ENDIF 
+!ENDIF
 
 # End Source File
 # End Target
