--- a/configure.in
+++ b/configure.in
@@ -171,7 +171,7 @@ EXPAT_LIBS=-lexpat
 
 # for LibXML
 LIBXML_CFLAGS=
-LIBXML_LIBS="-lxml2 -liconv"
+LIBXML_LIBS="-lxml2"
 
 # for Akaroa
 AKAROA_CFLAGS=
@@ -402,16 +402,15 @@ fi
 # Check for XML parsers: EXPAT and/or LIBXML
 #----------------------
 OPP_CHECK_LIB(LibXML XML parser, libxml/parser.h, xmlInitParser(), $LIBXML_CFLAGS, $LIBXML_LIBS, libxml_ok)
+if test $libxml_ok = no; then
+    OPP_CHECK_LIB(LibXML XML parser, libxml/parser.h, xmlInitParser(), $LIBXML_CFLAGS, -lxml2,
+                  libxml_ok, LIBXML_LIBS="-lxml2")
+fi
+if test $libxml_ok = no; then
+    OPP_CHECK_LIB(LibXML XML parser, libxml/parser.h, xmlInitParser(), -I/usr/include/libxml2, -lxml2,
+                  libxml_ok, LIBXML_CFLAGS="-I/usr/include/libxml2" LIBXML_LIBS="-lxml2")
+fi
 OPP_CHECK_LIB(Expat XML parser, expat.h, XML_ParserCreate(0), $EXPAT_CFLAGS, $EXPAT_LIBS, expat_ok)
-if test $libxml_ok = no; then
-    OPP_CHECK_LIB(LibXML XML parser, libxml/parser.h, xmlInitParser(), $LIBXML_CFLAGS, -lxml2 -liconv,
-                  libxml_ok, LIBXML_LIBS="-lxml2 -liconv")
-fi
-if test $libxml_ok = no; then
-    # for Cygwin:
-    OPP_CHECK_LIB(LibXML XML parser, libxml/parser.h, xmlInitParser(), -I/usr/include/libxml2, $LIBXML_LIBS,
-                  libxml_ok, LIBXML_CFLAGS="-I/usr/include/libxml2")
-fi
 
 if test $libxml_ok = yes; then
    AC_MSG_NOTICE([Using LibXML for XML parsing])
