--- a/src/utils/opp_makemake.in
+++ b/src/utils/opp_makemake.in
@@ -220,7 +220,7 @@ EOT
 
         -u | --userinterface)
         shift
-        userif=`echo $1 | tr [a-z] [A-Z]`
+        userif=`echo $1 | tr '[a-z]' '[A-Z]'`
         case "$userif" in
             CMDENV | TKENV)
             ;;
