--- a/src/utils/opp_makemake.in
+++ b/src/utils/opp_makemake.in
@@ -66,6 +66,10 @@ sub abs2rel(\$;\$;\$;)
     \$cur  =~ s|/./|/|g;
     \$base =~ s|/./|/|g;
 
+    \$abs  =~ s|//+|/|g;
+    \$cur  =~ s|//+|/|g;
+    \$base =~ s|//+|/|g;
+
     \$cur  =~ s|/*\$|/|;
     \$base =~ s|/*\$|/|;
 
