--- a/configure.in
+++ b/configure.in
@@ -315,15 +315,6 @@ else
 fi
 
 #----------------------
-# Check for wish.
-#----------------------
-AC_CHECK_PROGS(WISH, $WISH wish wish84 cygwish cygwish84, nope)
-if test "$WISH" = nope -a ! "$EMBED_TCL_CODE" = yes; then
-   OPP_PROBLEM_PACKAGES="$OPP_PROBLEM_PACKAGES wish"
-   AC_MSG_WARN([cannot find wish, part of Tcl/Tk - Plove will not work])
-fi
-
-#----------------------
 # Check for Tcl/Tk.
 #----------------------
 OPP_CHECK_LIB(Tcl/Tk, tk.h, Tk_MainLoop(), $TK_CFLAGS, $TK_LIBS, tcltk_ok)
@@ -386,8 +377,14 @@ else
         AC_MSG_ERROR([Tcl/Tk not found, needed for all GUI parts; version 8.4.0+ required])
     fi
 fi
-if echo 'catch {package require Tk 8.4; puts OK}; exit' | tclsh | grep OK >/dev/null; then :; else
-    AC_MSG_ERROR([Old Tcl/Tk version, 8.4.0+ required])
+
+# Check for wish.
+AC_CHECK_PROGS(WISH, $WISH wish wish85 wish84 cygwish cygwish85 cygwish84, nope)
+if test "$WISH" = nope; then
+   AC_MSG_ERROR([cannot find wish, part of Tcl/Tk -- maybe it is not in the PATH or has some exotic name (tested names were: wish wish85 wish84 cygwish cygwish85 cygwish84)])
+fi
+if echo 'catch {package require Tk 8.4; puts OK}; exit' | $WISH | grep OK >/dev/null; then :; else
+    AC_MSG_ERROR([wish command "package require Tk 8.4" failed: probably old Tcl/Tk version, version 8.4.0+ required])
 fi
 
 #----------------------
@@ -396,9 +393,9 @@ fi
 OPP_CHECK_LIB(BLT 2.4, blt.h, Blt_NameOfVector(0), $TK_CFLAGS, $BLT_LIBS $TK_LIBS, blt_ok)
 if test $blt_ok = yes; then
     HAVE_BLT=yes
-    if echo 'catch {package require BLT 2.4; puts OK}; exit' | tclsh | grep OK >/dev/null; then :; else
+    if echo 'catch {package require BLT 2.4; puts OK}; exit' | $WISH | grep OK >/dev/null; then :; else
         OPP_PROBLEM_PACKAGES="$OPP_PROBLEM_PACKAGES BLT"
-        AC_MSG_WARN([Tcl cannot load BLT, probably BLT not installed correctly.])
+        AC_MSG_WARN([Tcl cannot load BLT (wish command "package require BLT 2.4" failed), probably BLT not installed correctly.])
         AC_MSG_WARN([Check your installation and try typing "package require BLT 2.4" on the wish prompt to verify!])
     fi
 else
