--- a/configure.in
+++ b/configure.in
@@ -383,6 +383,9 @@ AC_CHECK_PROGS(WISH, $WISH wish wish85 wish84 cygwish cygwish85 cygwish84, nope)
 if test "$WISH" = nope; then
    AC_MSG_ERROR([cannot find wish, part of Tcl/Tk -- maybe it is not in the PATH or has some exotic name (tested names were: wish wish85 wish84 cygwish cygwish85 cygwish84)])
 fi
+if echo 'puts OK; exit' | $WISH | grep OK >/dev/null; then :; else
+    AC_MSG_ERROR([cannot run wish (wish command "puts OK; exit" failed): maybe you're not running X or DISPLAY environment variable not set?])
+fi
 if echo 'catch {package require Tk 8.4; puts OK}; exit' | $WISH | grep OK >/dev/null; then :; else
     AC_MSG_ERROR([wish command "package require Tk 8.4" failed: probably old Tcl/Tk version, version 8.4.0+ required])
 fi
