--- a/src/envir/Makefile.vc
+++ b/src/envir/Makefile.vc
@@ -58,7 +58,6 @@ clean:
 akoutvectormgr.obj: akoutvectormgr.cc \
   ../../include/cenvir.h \
   omnetapp.h \
-  cinifile.h \
   ../../include/csimul.h \
   ../../include/cmodule.h \
   ../../include/cstat.h \
@@ -71,6 +70,8 @@ akoutvectormgr.obj: akoutvectormgr.cc \
   args.h \
   envdefs.h \
   ../../include/envirext.h \
+  ../../include/cconfig.h \
+  platdep.h \
   ../../include/cobject.h \
   ../../include/util.h \
   ../../include/cpolymorphic.h \
@@ -90,6 +91,7 @@ args.obj: args.cc \
   envdefs.h \
   ../../include/defs.h
 cenvir.obj: cenvir.cc \
+  ../../include/ctypes.h \
   args.h \
   ../../include/distrib.h \
   cinifile.h \
@@ -99,18 +101,21 @@ cenvir.obj: cenvir.cc \
   ../../include/cmodule.h \
   speedmtr.h \
   filemgrs.h \
-  envdefs.h \
   ../../include/defs.h \
-  ../../include/random.h \
-  ../../include/carray.h \
   ../../include/globals.h \
-  ../../include/cexception.h \
-  ../../include/envirext.h \
   ../../include/cobject.h \
+  ../../include/onstartup.h \
   ../../include/util.h \
   ../../include/cpolymorphic.h \
-  ../../include/onstartup.h \
+  ../../include/cexception.h \
   ../../include/opp_string.h \
+  envdefs.h \
+  ../../include/random.h \
+  ../../include/cconfig.h \
+  patmatch.h \
+  ../../include/carray.h \
+  ../../include/envirext.h \
+  platdep.h \
   ../../include/ccoroutine.h \
   ../../include/cqueue.h \
   ../../include/cgate.h \
@@ -124,24 +129,39 @@ cinifile.obj: cinifile.cc \
   ../../include/util.h \
   cinifile.h \
   patmatch.h \
+  ../../include/cexception.h \
   ../../include/defs.h \
-  envdefs.h
+  envdefs.h \
+  ../../include/cconfig.h \
+  ../../include/cpolymorphic.h \
+  ../../include/opp_string.h
+cxmldoccache.obj: cxmldoccache.cc \
+  ../../include/cpolymorphic.h \
+  cxmldoccache.h \
+  ../../include/cxmlelement.h \
+  ../../include/cexception.h \
+  ../nedxml/saxparser.h \
+  ../../include/defs.h \
+  ../../include/util.h \
+  envdefs.h \
+  ../../include/opp_string.h
 filemgrs.obj: filemgrs.cc \
   ../../include/defs.h \
   ../../include/cenvir.h \
-  cinifile.h \
   omnetapp.h \
   ../../include/csimul.h \
   ../../include/cmodule.h \
   ../../include/cstat.h \
   ../../include/macros.h \
   filemgrs.h \
-  envdefs.h \
   ../../include/carray.h \
   ../../include/globals.h \
   ../../include/cexception.h \
   args.h \
+  envdefs.h \
   ../../include/envirext.h \
+  ../../include/cconfig.h \
+  platdep.h \
   ../../include/cobject.h \
   ../../include/util.h \
   ../../include/cpolymorphic.h \
@@ -180,7 +200,6 @@ main.obj: main.cc \
 omnetapp.obj: omnetapp.cc \
   args.h \
   omnetapp.h \
-  cinifile.h \
   patmatch.h \
   fsutils.h \
   ../../include/ctypes.h \
@@ -189,7 +208,10 @@ omnetapp.obj: omnetapp.cc \
   ../../include/cscheduler.h \
   ../../include/cpar.h \
   ../../include/random.h \
+  ../../include/crng.h \
   ../../include/cmodule.h \
+  ../../include/cxmlelement.h \
+  cxmldoccache.h \
   ../../include/cparsimcomm.h \
   envdefs.h \
   ../../include/defs.h \
@@ -198,6 +220,8 @@ omnetapp.obj: omnetapp.cc \
   ../../include/cenvir.h \
   ../../include/cexception.h \
   ../../include/envirext.h \
+  ../../include/cconfig.h \
+  platdep.h \
   ../../include/cobject.h \
   ../../include/util.h \
   ../../include/cpolymorphic.h \
@@ -211,14 +235,18 @@ omnetapp.obj: omnetapp.cc \
   ../../include/cdefaultlist.h
 patmatch.obj: patmatch.cc \
   patmatch.h \
+  ../../include/cexception.h \
   ../../include/defs.h \
-  envdefs.h
+  envdefs.h \
+  ../../include/opp_string.h \
+  ../../include/util.h
 platdep.obj: platdep.cc \
   ../../include/defs.h \
-  ../../include/util.h \
+  platdep.h \
   ../../include/cexception.h \
   ../../include/cenvir.h \
-  ../../include/opp_string.h
+  ../../include/opp_string.h \
+  ../../include/util.h
 seeds.obj: seeds.cc \
   omnetapp.h \
   ../../include/carray.h \
@@ -228,6 +256,8 @@ seeds.obj: seeds.cc \
   args.h \
   envdefs.h \
   ../../include/envirext.h \
+  ../../include/cconfig.h \
+  platdep.h \
   ../../include/cobject.h \
   ../../include/defs.h \
   ../../include/util.h \
@@ -237,4 +267,5 @@ seeds.obj: seeds.cc \
 speedmtr.obj: speedmtr.cc \
   speedmtr.h \
   ../../include/defs.h \
+  platdep.h \
   envdefs.h
